# router-monitor

./: .clang-format  .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile-alpine  Dockerfile.buildx  Dockerfile.cross  Dockerfile.generate  Dockerfile.old  Justfile  README.md  Taskfile.yaml  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  internet_isup.go  main.go  make_arm_libpcap.sh  runonrouter.sh  rustfmt.toml  statistics.go  utils.go
.github/workflows/: create-release.yml  docker-build.yml  docker-publish.yml
cmd/ebpf-firewall/: main.go
cmd/router-monitor/: main.go  main_test.go
dashboard/: ebpf-firewall-dashboard.json  ebpf-firewall-dashboard.ts  package.json  router-monitor-dashboard.json  router-monitor-dashboard.ts  tsconfig.json
dnsmasq/: dnsmasq.go  dnsmasq_test.go
dnsmasq/testdata/: dnsmasq.leases
ebpf/: .clang-format  .gitignore  Dockerfile  Dockerfile.generate  Taskfile.yaml  flake.nix  gen.go  go.mod  hello.c  main.go  router_monitor.c
ebpf-firewall/: .gitignore  Dockerfile  Taskfile.yaml  arp.go  ebpf-collector.go  ebpf_firewall.c  ebpffirewall_arm64_bpfel.go  flake.nix  gen.go  go.mod  go.sum  hello.c  internet-check.go  main.go  router_monitor.c
ebpf-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml
ebpf-rs/.vim/: coc-settings.json
ebpf-rs/router-monitor/: Cargo.toml
ebpf-rs/router-monitor-common/: Cargo.toml
ebpf-rs/router-monitor-ebpf/: Cargo.toml
ebpf-rs/router-monitor-ebpf/src/: main.rs
ebpf-rs/router-monitor/src/: main.rs
ebpf-rs/xtask/src/: build_ebpf.rs  run.rs
internal/dnsmasq/: dnsmasq.go  dnsmasq_test.go
internal/firewall/: arp.go  ebpf-collector.go  gen.go  internet-check.go
internal/internetcheck/: internet_isup.go
internal/routermonitor/: arp.go  arp_test.go  ebpf-collector.c  ebpf-collector.go  ebpfcollector_stub.go  gen.go  internet-check.go
internal/traffic/: network_traffic.go  network_traffic_test.go
internetcheck/: internet_isup.go
src/: arp.rs  arp_scan.rs  ddns_cloudflare.rs  dnsmasq.rs  internet_check.rs  main.rs  packet_monitor.rs
src/arp_scan_rs/: args.rs  mod.rs  network.rs  utils.rs  vendor.rs
traffic/: network_traffic.go  network_traffic_test.go
